--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,14 @@
 canvas{
-  width: 500px;
-  height: 500px;
   image-rendering: pixelated;
   image-rendering: crisp-edges;
+}
+.canvas{
+  width: 500px;
+  height: 500px;
+}
+.canvas-small{
+  width: 250px;
+  height: 250px;
 }
 *{
   box-sizing: border-box;
